[package]
name = "sdock"
version = "0.1.0"
edition = "2024"

[dependencies]
#libharuhishot =          { version = "0.4" }
libharuhishot =          { path = "/j/downloads/haruhishot/libharuhishot" }
nix =                    { version = "0.29.0", features = ["fs", "mman"] }

wayland-client =         { version = "0.31" }
wayland-protocols =      { version = "0.32" }


tempfile = "3.2"

